chrome/skin/classic/sameplace.css
/* ACCOUNTS */

#accounts > menu[role="account"],
#accounts > menu > menupopup > menuitem {
    list-style-image: url("chrome://xmpp4moz/skin/status/all-small.png");
}

#accounts > [role="account"][availability="unavailable"] {
    color: graytext;
    -moz-image-region: rect(48px 16px 64px 0px);
}

#accounts > [role="account"][availability="available"] {
    -moz-image-region: rect(16px 16px 32px 0px);
}

#accounts > [role="account"][availability="available"][show="dnd"] {
    -moz-image-region: rect(0px 16px 16px 0px);
}

#accounts > [role="account"][availability="available"][show="away"],
#accounts > [role="account"][availability="available"][show="xa"] {
    -moz-image-region: rect(32px 16px 48px 0px);
}

#accounts > menu > menupopup > menuitem[value="available"] {
    -moz-image-region: rect(16px 16px 32px 0px);
}

#accounts > menu > menupopup > menuitem[value="away"] {
    -moz-image-region: rect(32px 16px 48px 0px);    
}

#accounts > menu > menupopup > menuitem[value="dnd"] {
    -moz-image-region: rect(0px 16px 16px 0px);
}

#accounts > menu > menupopup > menuitem[value="unavailable"] {
    -moz-image-region: rect(48px 16px 64px 0px);
}

/* MIDDLE TOOLBAR */

[role="attach"] {
    list-style-image: url("attach.png");
}

/* CONTACT POPUP */

#contact > popup > menuitem {
    list-style-image: url("all-small.png"); 
}

#contact > popup > menuitem[availability="unavailable"] {
    color: graytext ! important;
    -moz-image-region: rect(48px 16px 64px 0px);
}

#contact > popup > menuitem[availability="available"] {
    -moz-image-region: rect(16px 16px 32px 0px);
}

#contact > popup > menuitem[availability="available"][show="dnd"] {
    -moz-image-region: rect(0px 16px 16px 0px);
}

#contact > popup > menuitem[availability="available"][show="away"],
#contact > popup > menuitem[availability="available"][show="xa"] {
    -moz-image-region: rect(32px 16px 48px 0px);
}

/* HEADER */

#head {
/*
  height: 31px;
  padding: 0;
  background-image: url("header_bg_1x34.png");*/
}

/* TOOLBAR */

toolbarbutton[command="hide"] {
    -moz-appearance: none;
    border: none;
    width: 10px;
    height: 12px;
    margin: 0 5px 0 10px;
    background: url("hide_10x12.png") center left no-repeat;
}

toolbarbutton[command="hide"]:hover {  
    background: transparent url("hide_hover_10x12.png") center left no-repeat;
}

toolbarbutton[label="People"],
toolbarbutton[label="Status"],
toolbarbutton[label="Tools"] {
    -moz-appearance: none;
    border: none;
    margin: 0 5px;
    height: 16px;
}

toolbarbutton[label="People"] {
    list-style-image: url("chrome://sameplace/skin/contacts.png");
}

toolbarbutton[label="Status"] {
    list-style-image: url("chrome://xmpp4moz/skin/status/all-small.png");    
    -moz-image-region: rect(16px 16px 32px 0px);
}

toolbarbutton[label="Tools"] {
    list-style-image: url("chrome://sameplace/skin/tools.png");
}

toolbarbutton[label="People"] > .toolbarbutton-text,
toolbarbutton[label="Status"] > .toolbarbutton-text,
toolbarbutton[label="Tools"] > .toolbarbutton-text {
    font-size: 80%;
}

toolbarbutton[label="People"] > .toolbarbutton-menu-dropmarker,
toolbarbutton[label="Status"] > .toolbarbutton-menu-dropmarker,
toolbarbutton[label="Tools"] > .toolbarbutton-menu-dropmarker {
    padding-left: 2px;
}

/* PROFILE AREA */

vbox#profile {
    background-color: #fcfcfc;
    margin: 0 0 0 0;
    border-bottom: 1px solid #e5e5e5;
}

textbox#profile-username {      
    -moz-appearance: none;
    height: 22px;
    margin: 2px 0 0 5px;
    padding: 0 0 0 0;
    color: #6d008d;
    font: 600 15px "Trebuchet MS", Trebuchet, Verdana, sans-serif;
    border: none;
    background-color: #fcfcfc;
}

textbox#status-message[draft="true"] {
    color: graytext;
}

textbox#status-message {
    -moz-appearance: none;
    height: 25px;
    margin: 0 0 0 5px;
    padding: 0 0 5px 0;
    color: #2c2c2c;
    font: 400 13px "Trebuchet MS", Trebuchet, Verdana;  
    border: none;
    background-color: #fcfcfc;
}


/* CONTACT BAR */

#contact-toolbox > toolbar {
    -moz-appearance: none;
/*    background: transparent url("conv_bg_1x28.png") top left repeat-x;*/
}


/* CONVERSATIONS */

#conversation-tabs tab {
        font-size: smaller;
}

#conversation-tabs .tabs-closebutton > .toolbarbutton-icon {
    -moz-margin-end: 0px !important;
    -moz-padding-end: 2px !important;
    -moz-padding-start: 2px !important;
}

#conversation-tabs .tabs-closebutton {
    list-style-image: url("chrome://global/skin/icons/close.png");
    -moz-appearance: none;
    -moz-image-region: rect(0px, 16px, 16px, 0px);
    padding: 4px 2px;
    border: none !important;
}

#conversation-tabs .tabs-closebutton:hover {
    -moz-image-region: rect(0px, 32px, 16px, 16px);
}

#conversation-tabs .tabs-closebutton:hover:active {
    -moz-image-region: rect(0px, 48px, 16px, 32px);
}

